fixed weird horizontal scroll

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,5 +1,6 @@
 body,html {
     background: #f5f5f5;
+    overflow-x: hidden;
 }
 .navbar {
     margin-bottom: 0px;
